# srenity-rs

./: Cargo.toml
src/: error.rs  handler.rs  lib.rs
src/models/: agent.rs  asset.rs  auth.rs  collection.rs  event.rs  information.rs  mod.rs  space.rs
