[package]
name = "srenity-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
uuid = { version = "1", features = ["serde"] }
wrapi = { git = "https://github.com/voz-technologies/wrapi.git" }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "macros"] }
